htick 0.03
----------

----- cvs ci ------
Fri Feb 25 11:19:12 NOVT 2000
max (patch from Vladimir Borozenets, 2:5005/49):
* cosmetical changes in areafix

----- cvs ci ------
Wed Feb 23 15:00:00 IZH 2000
Georgi:
* added new token MaxTicLineLength

----- cvs ci ------
Wed Feb 16 23:09:43 NOVT 2000
max:
* fixed some bug when calculates replace file without path

----- cvs ci ------
Sun Feb 13 15:59:24 NOVT 2000
max (patch from Alex Bronin):
* UTC time in path while hatching

----- cvs ci ------
Sat Feb 12 23:53:44 NOVT 2000
max:
* compiling without warnings under win32

----- cvs ci ------
Sat Feb 12 19:40:00 IZH 2000
Georgi:
* added new token originInAnnounce

----- cvs ci ------
Sat Feb 12 16:45:00 IZH 2000
Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
* added new keyword:
  SaveTic <FileEchoMask> <DirToSaveTic>
  <DirToSaveTic> - where put TIC for fileecho[es] <FileEchoMask>

----- cvs ci ------
Tue Feb  8 00:07:06 NOVT 2000
max (patch from Alex Bronin, 2:5049/36):
* executing command on receiving file
  ExecOnFile <filearea> <filemask> <command>
  command get full filepath as parameter
* increased crc buffer for speed
* continue fixing segmentation fault if field Desc in TIC > 255 chars
* areafix: using filefixKillReports instead areafixKillReports
* lock file contains pid in win32 too
* UTC time in Path
* added Orig to reports

----- cvs ci ------
Sat Feb  5 02:36:03 NOVT 2000
max:
* adopted my changes in fidoconfig for import, export, mandatory & groups

----- cvs ci ------
Sat Jan 29 18:17:00 2000
Georgi:
* if FileAreaBaseDir is "Passthrough", then autocreated filearea is Passthrough
* "htick hatch": added support filemask for replace field in TIC

----- cvs ci ------
Fri Jan 28 21:40:00 CET 2000
sms:
* changed groups from chars to strings

----- cvs ci ------
Sun Jan 23 13:52:00 2000
Georgi:
* fixed bug in function removeDesc
* change code in filelist generator

----- cvs ci ------
Sun Jan 23 04:30:00 2000
Georgi:
* change code in function removeDesc
